src/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

:root {
  --high-priority-color: #dc262690;
  --medium-priority-color: #eab30890;
  --low-priority-color: #22c55e90;

  --high-priority-color-opaque: #dc2626;
  --medium-priority-color-opaque: #eab308;
  --low-priority-color-opaque: #22c55e;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* border: 1px solid red; */
}

button {
  cursor: pointer;
}

body {
  height: 100vh;
  font-family: "Roboto", sans-serif;
}

header {
  padding: 10px 20px;
  background-color: #0c4a6e;
  color: white;
  height: 6%;
}

.main {
  height: 94%;
  display: grid;
  grid-template-columns: 1fr 5fr;
}

.left-panel {
  padding: 20px;
  background-color: #e0f2fe;
}

.left-panel .top {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

button.new-project-btn {
  background-color: unset;
  border: 1px solid black;
  border-radius: 50%;
  font-size: 24px;
  width: 30px;
  height: 30px;
}

.projects-list {
  margin-top: 5px;
  padding: 5px;
  font-size: 20px;
}

.project {
  padding: 10px 0px;
  margin-left: 15px;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
}

.project:hover::after {
  content: " >>";
}
/* ----------------------- */

.content {
  padding: 40px;
}

.content .top {
  display: flex;
  /* justify-content: space-between; */
  gap: 20px;
  align-items: center;
}

.new-task-btn {
  padding: 5px;
  font-size: 18px;
}

.tasks-container {
  margin-top: 10px;
  display: flex;
  flex-flow: column;
  gap: 10px;
}

.task {
  padding: 10px;
  border: 1px solid rgb(185, 185, 185);
  display: flex;
  flex-flow: column;
  font-size: 18px;
  gap: 10px;
  border-left: 10px solid rgb(185, 185, 185);
}

.task .basic {
  display: grid;
  grid-template-columns: 0.2fr 12fr 1fr 0.5fr;
  align-items: center;
  /* padding: 10px; */
  gap: 10px;
}

.task .details {
  border-top: 1px solid gray;
  padding: 10px 5px;
  padding-bottom: 0;
}

.task .priority,
.dueDate {
  width: min-content;
}

.view-btn {
  font-size: 16px;
  width: 60px;
  padding: 5px;
}

.task input[type="checkbox"]:checked ~ label {
  text-decoration: line-through;
  color: gray;
}

.task input[type="checkbox"] {
  width: 20px;
  height: 20px;
}

/* ---------------- */

dialog {
  width: 25%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: none;
  border-radius: 4px;
}

dialog::backdrop {
  background-color: rgba(0, 0, 0, 0.6);
}

dialog .top {
  display: flex;
  justify-content: space-between;
  background-color: #0c4a6e;
  color: white;
  padding: 10px 15px;
}

.close-btn {
  border: none;
  outline: none;
  background-color: unset;
  font-size: 20px;
  color: white;
}

.modal-content {
  height: 100%;
  display: flex;
  flex-flow: column;
  justify-content: space-between;
}

form {
  padding: 15px;
  height: 100%;
  display: flex;
  flex-flow: column;
  gap: 15px;
  font-size: 20px;
}

button[type="submit"] {
  padding: 10px;
  font-size: 18px;
  border-radius: 5px;
  border: 1px solid black;
  align-self: flex-end;
  background-color: #0c4a6e;
  color: white;
  border: none;
}

input,
textarea {
  padding: 10px;
  font-size: 18px;
}

textarea {
  resize: none;
}

fieldset {
  border: none;
  display: flex;
  gap: 10px;
}

legend {
  margin-bottom: 20px;
}

input[type="radio"] {
  display: none;
}

input[type="radio"] ~ label {
  cursor: pointer;
  border: 1px solid gray;
  border-radius: 4px;
  padding: 5px 10px;
}

input[type="radio"]:checked ~ label {
  color: white;
  background-color: gray;
}

